# braintrust-playground

./: .env.example  Makefile  README.md  pyproject.toml  ruff_tool.py
code_conversion/: .env.example  agent.py  data.json  eval_code_conversion.py  evals.py  push_datasets.py  push_prompts.py  push_scorers.py  requirements.txt  scorers.py  sql_to_python.json  tools.py
pipecat_example/: .env.example  README.md  requirements.txt
pipecat_example/src/: app.py  manual.py  runner.py  span_processor.py
