[project]
name = "braintrust-playground"
version = "0.1.0"
description = "A playground for Braintrust experiments"
requires-python = ">=3.12"
dependencies = [
    "braintrust[cli]",
    "pydantic",
    "ruff",
    "openai-agents",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["playground"] 

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]